# DATAGUARD_StellarRiseIn_

./: .env  .env.production  .lighthouserc.json  DEPLOYMENT.md  NETLIFY_DEPLOY.md  README.md  SECURITY.md  netlify.toml  package-lock.json  package.json  tailwind.config.js  vercel.json
.github/workflows/: ci-cd.yml
contracts/: Cargo.toml  README.md  deploy.sh
contracts/src/: lib.rs  main.rs
server/: .env  package-lock.json  package.json  server.js
server/middleware/: auth.js
server/models/: User.js
server/routes/: auth.js  users.js
src/: App.tsx  index.css
src/components/: AnimatedBackground.tsx  Navbar.tsx  ProtectedRoute.tsx  Toast.tsx
src/context/: AuthContext.tsx  ToastContext.tsx  WalletContext.tsx
src/pages/: Dashboard.tsx  LandingPage.tsx  LoginPage.tsx  RecordsPage.tsx  SignupPage.tsx  UploadPage.tsx  VerifyPage.tsx
src/services/: authService.ts  contractService.ts  hashService.ts
